[gd_scene load_steps=5 format=3 uid="uid://dqbe4edkv8cbp"]

[ext_resource type="Script" path="res://script/player_hud.gd" id="1_lfsgn"]
[ext_resource type="FontFile" uid="uid://cmhsa3qrkxdfg" path="res://assets/Kanit-MediumItalic.ttf" id="2_iefoe"]
[ext_resource type="PackedScene" uid="uid://ciwiojs8gr5ac" path="res://ui/comps/start_btn.tscn" id="3_l863i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj3ds"]
bg_color = Color(0, 0, 0, 0.352941)

[node name="PlayerHUD" type="Node"]
script = ExtResource("1_lfsgn")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Timer" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_iefoe")
theme_override_font_sizes/font_size = 48
text = "0.00"

[node name="WinPause" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oj3ds")

[node name="CenterContainer" type="CenterContainer" parent="WinPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Next" parent="WinPause/CenterContainer" instance=ExtResource("3_l863i")]
layout_mode = 2
text = "Choose Level"

[node name="FailPause" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oj3ds")

[node name="CenterContainer" type="CenterContainer" parent="FailPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Remake" parent="FailPause/CenterContainer" instance=ExtResource("3_l863i")]
layout_mode = 2
text = "Again?"

[connection signal="pressed" from="WinPause/CenterContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="FailPause/CenterContainer/Remake" to="." method="_on_remake_pressed"]
